--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
     <!-- public/index.html -->
   <!-- Add these lines inside the <head> tag -->
 
-    
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Boldonse&display=swap" rel="stylesheet">
 
 
 
+ <style>
+ 
 
+
+ </style>
 
 
   </head>
